Postgres server sset up clean, working perfectly

--- a/backend/docker-compose.yml
+++ b/backend/docker-compose.yml
@@ -1,17 +1,25 @@
-version: "3.8"
-
 services:
+  # PostgreSQL Database
   postgres:
-    image: postgres
-    container_name: synapsedb
+    image: postgres:15-alpine
+    container_name: synapse_postgres
+    restart: unless-stopped
     environment:
-      - POSTGRES_USER=postgres
-      - POSTGRES_PASSWORD=synapseDB
-      - POSTGRES_DB=synapseDB
-    volumes:
-      - pgdata:/var/lib/postgresql/data
+      POSTGRES_DB: SynapseDB
+      POSTGRES_USER: postgress
+      POSTGRES_PASSWORD: Cr7#thegreat
+      PGDATA: /var/lib/postgresql/data/pgdata
     ports:
       - "5432:5432"
+    volumes:
+      - postgres_data:/var/lib/postgresql/data
+      - ./migrations:/docker-entrypoint-initdb.d
+    healthcheck:
+      test: ["CMD-SHELL", "pg_isready -U postgress -d SynapseDB"]
+      interval: 30s
+      timeout: 10s
+      retries: 3
 
 volumes:
-  pgdata:
+  postgres_data:
+    driver: local
