--- a/backend2/package.json
+++ b/backend2/package.json
@@ -3,9 +3,12 @@
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "ts-node testDatabase.ts",
     "start": "nodemon --exec ts-node main.ts",
-    "dev": "ts-node-dev --esm --respawn --transpileOnly main.ts"
+    "dev": "ts-node-dev --esm --respawn --transpileOnly main.ts",
+    "db:generate": "drizzle-kit generate",
+    "db:migrate": "drizzle-kit migrate",
+    "db:studio": "drizzle-kit studio"
   },
   "keywords": [],
   "author": "",
@@ -15,6 +18,8 @@
     "@types/multer": "^2.0.0",
     "cors": "^2.8.5",
     "dotenv": "^17.2.3",
+    "drizzle-kit": "^0.31.5",
+    "drizzle-orm": "^0.44.6",
     "express": "^5.1.0",
     "multer": "^2.0.2",
     "pg": "^8.16.3",
