--- a/backend2/package.json
+++ b/backend2/package.json
@@ -3,6 +3,8 @@
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
+    "build": "tsc",
+    "start:prod": "node dist/main.js",
     "test": "ts-node testDatabase.ts",
     "start": "nodemon --exec ts-node main.ts",
     "dev": "ts-node-dev --esm --respawn --transpileOnly main.ts",
