--- a/backend2/package.json
+++ b/backend2/package.json
@@ -4,7 +4,7 @@
   "main": "index.js",
   "scripts": {
     "build": "tsc",
-    "start:prod": "node dist/main.js",
+    "start-prod": "node dist/main.js",
     "test": "ts-node testDatabase.ts",
     "start": "nodemon --exec ts-node main.ts",
     "dev": "ts-node-dev --esm --respawn --transpileOnly main.ts",
