--- a/backend2/package.json
+++ b/backend2/package.json
@@ -8,6 +8,7 @@
     "test": "ts-node testDatabase.ts",
     "start": "nodemon --exec ts-node main.ts",
     "dev": "ts-node-dev --esm --respawn --transpileOnly main.ts",
+    "clear-db": "ts-node clearDatabase.ts",
     "db:generate": "drizzle-kit generate",
     "db:migrate": "drizzle-kit migrate",
     "db:studio": "drizzle-kit studio"
