--- a/backend2/package.json
+++ b/backend2/package.json
@@ -24,6 +24,7 @@
     "drizzle-kit": "^0.31.5",
     "drizzle-orm": "^0.44.6",
     "express": "^5.1.0",
+    "mongoose": "^8.19.2",
     "multer": "^2.0.2",
     "pg": "^8.16.3",
     "pinata": "^2.5.1"
