--- a/backend2/package.json
+++ b/backend2/package.json
@@ -16,7 +16,7 @@
   },
   "keywords": [],
   "author": "",
-  "license": "ISC",
+    "license": "ISC",
   "description": "",
   "dependencies": {
     "@types/multer": "^2.0.0",
@@ -28,6 +28,7 @@
     "express": "^5.1.0",
     "mongoose": "^8.19.2",
     "multer": "^2.0.2",
+    "nodemon": "^3.1.11",
     "pg": "^8.16.3",
     "pinata": "^2.5.1"
   },
