Fixing db issues pt2

--- a/backend2/package.json
+++ b/backend2/package.json
@@ -12,8 +12,7 @@
     "clear-db": "ts-node clearDatabase.ts",
     "db:generate": "drizzle-kit generate",
     "db:migrate": "drizzle-kit migrate",
-    "db:studio": "drizzle-kit studio",
-    "migrate": "ts-node runMigrations.ts"
+    "db:studio": "drizzle-kit studio"
   },
   "keywords": [],
   "author": "",
